[package]
name = "del_lib"
version = "0.1.0"
edition = "2021"
description = "securely deletes a file by overwriting its content with cryptographic shredding and then securely deletes the file itself"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/codemanfreecodes/securely"
authors = ["ksm <hw107744@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
rand = "0.8"
filetime = "0.2"
